--- a/front-end/src/Pages/Cart/Cart.css
+++ b/front-end/src/Pages/Cart/Cart.css
@@ -1,19 +1,19 @@
-.home__page{
+.cart__page{
     box-sizing: border-box;
-    padding-top: 80px;
+    /* padding-top: 80px; */
   height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   background-color: rgb(247, 247, 247);
 }
 
 
 
 @media (max-width: 768px) {
-    .home__page {
+    .cart__page {
       padding-top: 30px;
     }
     
