--- a/front-end/src/Pages/Home-Page/Home.css
+++ b/front-end/src/Pages/Home-Page/Home.css
@@ -1,20 +1,19 @@
-.home__page{
-    box-sizing: border-box;
-    padding-top: 80px;
-  height: 100vh;
+.home__page {
+  box-sizing: border-box;
+  /* margin-top: 80px; */
+  min-height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   background-color: rgb(247, 247, 247);
 }
 
-
-
 @media (max-width: 768px) {
-    .home__page {
-      padding-top: 30px;
-    }
-    
+  .home__page {
+    padding-top: 30px;
   }
+}
+
+
