--- a/front-end/src/Pages/Secondary-Pages/Boards/Boards.css
+++ b/front-end/src/Pages/Secondary-Pages/Boards/Boards.css
@@ -1,17 +1,17 @@
-.contact__page {
+.boards__page {
     box-sizing: border-box;
-    /* padding-top: 80px; */
-    height: 100vh;
+    /* margin-top: 80px; */
+    min-height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
     /* align-items: center;
     justify-content: center; */
     background-color: rgb(247, 247, 247);
-}
-
-@media (max-width: 768px) {
-    .contact__page {
-        padding-top: 30px;
+  }
+  
+  @media (max-width: 768px) {
+    .boards__page {
+      padding-top: 30px;
     }
-}
+  }
