--- a/front-end/src/Components/Navbar/Navbar.css
+++ b/front-end/src/Components/Navbar/Navbar.css
@@ -39,7 +39,7 @@ html * {
 }
 
 .header2 {
-    position: fixed;
+    position: flex;
     /* top:0; */
     /* width: 100vw; */
     display: flex;
@@ -63,30 +63,23 @@ html * {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    background-color: rgb(247, 247, 247);
-    border-bottom: 1px solid rgb(228, 228, 228);
-    border-radius: 5px;
-    height: 60px;
+    /* height: 60px; */
 }
 
 .nav-logo-component {
-    width: 100px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
 }
 
 .logo-nav-link {
     text-decoration: none;
-    height: 80px;
+    height: 140px;
 }
 .logo-nav-slogan {
     margin-top: 0px;
     font-size: 13px;
 }
 
-.logo {
-    /* width:150px; */
-    height: 40px;
-}
 .nav-options {
     /* background: rgb(0, 0, 0); */
     /* padding-left: 25px; */
@@ -134,6 +127,7 @@ html * {
     height: 70px;
     }
 } */
+
 @media (max-width: 768px) {
     /*Mobile View */
 
