--- a/front-end/src/Pages/My-Account/MyOrders.css
+++ b/front-end/src/Pages/My-Account/MyOrders.css
@@ -10,7 +10,7 @@
     background-color: rgb(247, 247, 247);
 }
 
-.btn {
+.addresses-btn {
     background-color: rgb(252, 222, 3);
     color: #1c1b1b;
     border: 0;
