--- a/front-end/src/Components/ProductCard/ProductCard.css
+++ b/front-end/src/Components/ProductCard/ProductCard.css
@@ -1,29 +1,39 @@
 .productCard {
   width: 290px;
   height: 420px;
+  background-color: #fff;
+  /* border: 1px solid #767676; */
+ 
+}
 
-  /* background-color: rgb(223, 20, 20) */
-}
-.productCard__image_holder {
-  /* background-color: red; */
-}
 .productCard__image {
   width: 100%;
   height: 352px;
-  
 }
 .productCard__title {
-    margin-top: 10px;
+  margin-top: 10px;
   letter-spacing: 2px;
   font-size: 12px;
   padding: 5px;
   text-align: center;
-  color: #0E0C0B
+  color: #0e0c0b;
+  background-color: #fff;
 }
 .productCard__price {
   letter-spacing: 2px;
   font-size: 12px;
   padding: 5px;
   text-align: center;
-  color: #0E0C0B
+  color: #0e0c0b;
+  background-color: #fff;
+}
+
+@media (max-width: 375px) {
+  .productCard {
+    width: 270px;
+    height: 400px;
+    background-color: #fff;
+    margin-bottom: 15px;
+   
+  }
 }
