--- a/front-end/src/Pages/Cart/Cart.css
+++ b/front-end/src/Pages/Cart/Cart.css
@@ -33,6 +33,7 @@ Black: rgb(14, 12, 11)  */
     cursor: pointer;
     margin-top: 32px;
     margin-right: 20px;
+    display: block;
 }
 
 .yourbag-btn {
@@ -45,6 +46,12 @@ Black: rgb(14, 12, 11)  */
     font-size: 16px;
     cursor: pointer;
     margin-top: 32px;
+    margin-right: 20px;
+    display: block;
+}
+
+.yourbag-btn-link {
+    text-decoration: none;
 }
 
 .btn:active {
