--- a/front-end/src/Components/Pages/Cart/CartItem.module.css
+++ b/front-end/src/Components/Pages/Cart/CartItem.module.css
@@ -1,8 +1,7 @@
 .cart-item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid #8a2b06;
+    border-bottom: 1px solid black;
     padding: 1rem 0;
     margin: 1rem 0;
 }
@@ -16,7 +15,6 @@
     width: 10rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .price {
@@ -48,7 +46,7 @@
     font-weight: bold;
     font-size: 1.25rem;
     color: #8a2b06;
-    border: 1px solid #8a2b06;
+    border: none;
     width: 3rem;
     text-align: center;
     border-radius: 6px;
@@ -62,4 +60,60 @@
 .cart-item button:active {
     background-color: #8a2b06;
     color: white;
+}
+
+/* image styling */
+.productCard__image {
+    display: block;
+    /* max-width: 230px;
+    max-height: 95px; */
+    width: 100%;
+    height: 100%;
+    max-height: 150px;
+    object-fit: contain;
+    overflow: auto;
+    margin-right: 20px;
+    display: block;
+}
+.image_containter {
+    max-height: 150px;
+    object-fit: contain;
+    width: auto;
+    height: auto;
+    margin-right: 20px;
+}
+
+.div_align {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.title {
+    font-size: 15px;
+}
+
+.size {
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.price {
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.quantity__select {
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+.quantity__number {
+    font-size: 12px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.quantity__select {
+    display: inline-flex;
 }
