--- a/front-end/src/Components/Pages/Shop/Shop.css
+++ b/front-end/src/Components/Pages/Shop/Shop.css
@@ -1,60 +1,66 @@
 .shop__page {
-  box-sizing: border-box;
-  /* padding-top: 80px; */
-  min-height: 100vh;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-  background-color: rgb(247, 247, 247);
-}
-.shop__page__display{
-    margin: 20px 0;
+    box-sizing: border-box;
+    /* padding-top: 80px; */
+    min-height: 100vh;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-  justify-content: center;
+    /* justify-content: center; */
+    background-color: rgb(247, 247, 247);
+}
+.shop__page__display {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgb(206, 206, 206);
 }
 .shop__page__display__title {
     width: 100%;
     text-align: left;
-  margin: 20px 25px;
-  font-size: 25px;
+    margin: 20px 25px;
+    font-size: 25px;
 }
 .shop__page__product_holder {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
-.product_card_link{
-  text-decoration: none;
-  margin: 10px 10px;
-  
+.product_card_link {
+    text-decoration: none;
+    margin: 10px 10px;
 }
-.product_card_link:hover{
-cursor: pointer;
+.product_card_link:hover {
+    cursor: pointer;
 }
-.product__search{
-  width: 100%;
+.product__search {
+    width: 100%;
 }
 
 .product__search__input {
-  padding: 10px;
-  width: 100%;
-  border: none;
-  height: 60px;
-  font-size: 23px;
-  border-bottom: 1px solid #75758B
+    padding: 10px;
+    width: 100%;
+    border: none;
+    height: 60px;
+    font-size: 23px;
+    border-bottom: 1px solid #75758b;
 }
 .product__search__input:focus {
-  outline: none;
+    outline: none;
 }
 
 @media (max-width: 768px) {
-  .shop__page {
-    /* padding-top: 30px; */
-  }
+    .shop__page {
+        /* padding-top: 30px; */
+    }
+}
+
+@media (max-width: 992px) {
+    .sidebar-col {
+        display: none;
+    }
 }
