--- a/front-end/src/Components/ProductDetailsPage/ProductDetailPage.css
+++ b/front-end/src/Components/ProductDetailsPage/ProductDetailPage.css
@@ -141,6 +141,9 @@ label {
         margin-left: 00px;
         width: 295px;
     }
+    .productDetail__page {
+        margin-bottom: 40px;
+    }
 }
 @media (max-width: 375px) {
     .productDetail__page__image {
