--- a/front-end/src/Components/Navbar/Navbar.css
+++ b/front-end/src/Components/Navbar/Navbar.css
@@ -98,7 +98,7 @@ li {
     display: none;
 }
 .option {
-    padding: 0 20px;
+    padding: 0 15px;
     text-decoration: none;
 }
 .option:hover {
@@ -116,11 +116,11 @@ li {
 }
 .link {
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px !important;
     color: white;
     padding-bottom: 3px;
     /* background-color:blueviolet */
-    font-weight: 700;
+    /* font-weight: 700; */
     text-decoration: none;
 }
 .link::after {
@@ -135,12 +135,15 @@ li {
     width: 100%;
     transition: all 0.4s;
 }
+.link:hover {
+    text-decoration: none;
+}
 
 .mobile-menu {
     display: none;
 }
 
-@media only screen and (max-width: 920px) {
+@media only screen and (max-width: 930px) {
     .option {
         padding: 0 7px;
         text-decoration: none;
@@ -176,7 +179,7 @@ li {
     }
     .nav-options.active {
         background: rgb(rgb(14, 12, 11));
-        background: #fff;
+        /* background: rgb(139, 72, 72); */
         top: 80px;
         right: 0;
         opacity: 1;
@@ -205,7 +208,7 @@ li {
 
     .link {
         text-decoration: none;
-        font-size: 18px;
+        font-size: 14px !important;
         color: rgb(0, 0, 0) !important;
         padding-bottom: 3px;
         /* background-color:blueviolet */
