finished side bar, ui work

--- a/front-end/src/Components/Navbar/Navbar.css
+++ b/front-end/src/Components/Navbar/Navbar.css
@@ -8,6 +8,10 @@ html * {
     font-family: Arial;
 }
 
+a:hover {
+    color: white !important;
+}
+
 /*Desktop View*/
 .header {
     box-sizing: border-box;
