--- a/front-end/src/Pages/About-Us/AboutUs.css
+++ b/front-end/src/Pages/About-Us/AboutUs.css
@@ -14,14 +14,20 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 40px;
+  margin-top: 40px;
 }
 .about__page__wrapper > h1 {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   font-size: 30px;
   /* margin-bottom: 10px;; */
 }
 .about__page__wrapper > p {
   margin-top: 10px;
+  max-width: 800px;
+  line-height: 35px;
+}
+.about__page__wrapper__first_paragraph {
+  margin-top: 50px !important;
   max-width: 800px;
   line-height: 35px;
 }
@@ -45,7 +51,9 @@
 .about__page__link__image:hover {
     transform: scale(1.05);
 }
-
+.about__page__featured__products{
+  margin-top: 60px;
+}
 .about__page__featured__products__title {
   font-size: 22px;
   text-align: center;
