--- a/front-end/src/Pages/Home-Page/MainLinks/MainLinks.css
+++ b/front-end/src/Pages/Home-Page/MainLinks/MainLinks.css
@@ -76,8 +76,8 @@
 
 .link__image {
     display: block;
-    width: 100%;
-    height: auto;
+    /* width: 100%; */
+    height: 100%;
     transition: transform 0.8s ease;
 }
 
@@ -85,7 +85,7 @@
     .link__image {
         display: block;
         height: 100%;
-        width: auto;
+        /* width: auto; */
         transition: transform 0.8s ease;
     }
 }
