--- a/front-end/src/Components/Navbar/Navbar.css
+++ b/front-end/src/Components/Navbar/Navbar.css
@@ -191,7 +191,7 @@ li {
         z-index: 99;
         align-content: center;
         padding-left: 0px;
-        background-color: rgb(rgb(14, 12, 11));
+        background-color: white;
         display: inline-block;
     }
 
